# celery-async-test

./: pyproject.toml
celery_async_test/: celery.py  tasks.py
tests/: test_celery_async_test.py
