[tool.poetry]
name = "celery-async-test"
version = "0.1.0"
description = ""
authors = ["Ben Sully <ben.sully@grafana.com>"]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.2.3"
uvloop = "^0.16.0"
loguru = "^0.6.0"
redis = "^4.1.2"
ipython = "^8.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
